--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -25,10 +25,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      - name: Run a multi-line script
+      - name: Login
+        with:
+          super_secret: ${{ secrets.TEST_PASSWORD }}
+        env:
+          super_secret: ${{ secrets.TEST_PASSWORD }}
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          curl -L -X POST 'https://qatools.ro/api/login.php?username=tester&password=${{ secrets.TEST_PASSWORD }}'
